add page template

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>SMLDMS</title>
-  <meta name="description" content="smldms | Mµ|t¡D15C1Pl1N4rY 4rt15t / Ac1d lØvΞr">
-  <meta name="smldms" content="">
+  <meta name="description" content="SMLDMS | Generative & Crypto Art">
+  <meta name="smldms" content="SMLDMS | Generative & Crypto Art">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -29,7 +29,7 @@
   <!-- JS
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="lib/p5.min.js"></script>
-  <script src="sketch2.js"></script>
+  <script src="sketch.js"></script>
 
 
 
@@ -50,7 +50,7 @@
         <li><a href="#"><i class="fa fa-envelope site-nav--icon"></i>Contact</a></li>
       </ul>
     </nav>
-    <div id="menu-toggle" class="menu-toggle" onClick="cambiarClase()">
+    <div id="menu-toggle" class="menu-toggle" onClick="changeMenu()">
       <div class="hamburger"></div>
     </div>
   </header>
@@ -58,17 +58,17 @@
 
 
 
-  <div class="section">
+  <div class="section title">
     <div class="container">
       <div class="row">
         <div class="one-half column" style="margin-top: 1%">
-          <h2>SMLDMS</h2>
-          <h6 style="margin-top: -5%">Generative Art / Crypto Art</h6>
+          <h2><a href="../../index.html" style="text-decoration: none;"> SMLDMS</h2>
+          <h6 style="margin-top: -5%">Generative Art / Crypto Art</h6></a>
         </div>
       </div>
     </div>
   </div>
-  <div class="section">
+  <div class="section p5">
     <div class="container">
       <div class="row">
         <div class="twelve columns" style="margin-top: 100%">
@@ -136,7 +136,7 @@
           <a class="button"
             href="https://async.market/blueprints/630e0b0e4048959f0c782f17/smldms-patterns-over-landform">View on
             Async.art</a>
-          <a class="button" href="https://pol.smldms.com">More details</a>
+          <a class="button" href="pages/lof/lof.html">More details</a>
         </div>
       </div>
     </div>
