--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/custom.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
   <link rel="stylesheet" href="css/nav.css" />
   <link rel="stylesheet" href="css/masonry.css" />
@@ -29,9 +30,7 @@
   <!-- JS
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="lib/p5.min.js"></script>
-  <script src="sketch.js"></script>
-
-
+  <script src="sketch2.js"></script>
 
   <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -44,10 +43,9 @@
     <nav id="site-nav" class="site-nav">
       <ul>
         <li><a href="#"><i class="fa fa-home site-nav--icon"></i>Home</a></li>
-        <li><a href="#"><i class="fa fa-info site-nav--icon"></i>NFTs</a></li>
-        <li><a href="#"><i class="fa fa-pencil-alt site-nav--icon"></i>Articles</a></li>
-        <li><a href="#"><i class="fa fa-dollar-sign site-nav--icon"></i>Linktree</a></li>
-        <li><a href="#"><i class="fa fa-envelope site-nav--icon"></i>Contact</a></li>
+        <li><a href="#folio"><i class="fa fa-info site-nav--icon"></i>Projects</a></li>
+        <li><a href="about.html"><i class="fa fa-pencil-alt site-nav--icon"></i>About</a></li>
+        <li><a href="https://linktr.ee/smldms"><i class="fa fa-dollar-sign site-nav--icon"></i>Linktree</a></li>
       </ul>
     </nav>
     <div id="menu-toggle" class="menu-toggle" onClick="changeMenu()">
@@ -80,39 +78,14 @@
 
 
 
-  <!-- Intro
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="section">
-    <div class="container">
-      <div class="row">
-        <div class="one-half column" style="margin-top: 5%">
-          <h5>Mµ|t¡D15C1Pl1N4rY 4rt15t / Ac1d lØvΞr</h5>
-          <p>Actor of the French underground techno scene of the 90s, smldms still feeds on these dark and industrial
-            influences in his artwork. Self-taught, he has always practiced digital arts. Multidisciplinarity is its
-            major asset using code, photography, video and 3D motion design.</p>
-          <p>In 2007, he was also co-founder of the very first digital art festival “Empreintes Numériques” in Toulouse.
-          </p>
-          <p>With blockchain and Art Crypto, smldms has found a field of expression consistent with its own philosophy,
-            respecting the triptych of Art (the work, the artist and its audience), without any intermediary.</p>
-          <p>His main fields of exploration are randomness, loops and glitch.</p>
-        </div>
-        <div class="one-half column" style="margin-top: 5%">
-          <img class="u-full-width" src="assets/img/home/square.gif" class="u-full-width">
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-
   <!-- LAST PROJECT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <hr>
   <div class="section">
     <div class="container">
       <div class="row">
+        <h5>Last NFT Drop |||  |||||| | ||| | ||| ||</h5>
         <div class="twelve columns" style="margin-top: 0%">
-          <img src="assets/img/home/last/POL_banner.jpg" class="u-full-width">
+          <a href="pages/lof/lof.html"><img src="assets/img/home/last/POL_banner.jpg" class="u-full-width"></a>
         </div>
       </div>
       <div class="twelve columns" style="margin-top: 0%">
@@ -146,23 +119,24 @@
 
   <!-- PORTFOLIO
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <hr>
+  <hr id="folio">
   <div class="section">
     <div class="container">
       <div class="row">
         <div class="twelve columns" style="margin-top: 0%">
+          <h5>FEATURED ||||||||||  ||| | |||||| | ||| ||</h5>
           <div class="masonry">
-            <div class="item"><a href="#"><img class="u-full-width" src="assets/img/portfolio/1.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="assets/img/portfolio/2.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="assets/img/portfolio/3.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="assets/img/portfolio/4.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="assets/img/portfolio/5.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="assets/img/portfolio/6.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="assets/img/portfolio/7.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="assets/img/portfolio/8.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="assets/img/portfolio/9.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="assets/img/portfolio/10.jpg" alt=""></a></div>
-
+            <div class="item"><a href="https://async.market/blueprints/63191446baa8049d904f9cb9/smldms-the-async-curves"><img class="u-full-width" src="assets/img/portfolio/asyncCurves_0000_Calque 12_0009_asyncCurves_0002_Calque 10.jpg" alt=""></a></div>
+            <div class="item"><a href="https://www.fxhash.xyz/generative/11016"><img class="u-full-width" src="assets/img/portfolio/01.png" alt=""></a></div>
+            <div class="item"><a href="https://www.fxhash.xyz/generative/13623"><img class="u-full-width" src="assets/img/portfolio/10.jpg" alt=""></a></div>
+            <div class="item"><a href="https://async.market/blueprints/6310a03a508206edcd1d73c9/smldms-mona-kamoto"><img class="u-full-width" src="assets/img/portfolio/monakamoto.jpg" alt=""></a></div>
+            <div class="item"><a href="https://www.fxhash.xyz/generative/10893"><img class="u-full-width" src="assets/img/portfolio/47.png" alt=""></a></div>
+            <div class="item"><a href="https://www.fxhash.xyz/generative/15900"><img class="u-full-width" src="assets/img/portfolio/5.jpg" alt=""></a></div>
+            <div class="item"><a href="https://www.fxhash.xyz/generative/15153"><img class="u-full-width" src="assets/img/portfolio/crypto_portrait_2.png" alt=""></a></div>
+            <div class="item"><a href="https://www.fxhash.xyz/generative/8990"><img class="u-full-width" src="assets/img/portfolio/genesis_block_4.png" alt=""></a></div>
+            <div class="item"><a href="https://www.youtube.com/watch?v=6ifQ22YhC4Q&t=517s"><img class="u-full-width" src="assets/img/portfolio/VEO-2a-6-1024x576.png" alt=""></a></div>
+            <div class="item"><a href="https://www.fxhash.xyz/generative/13150"><img class="u-full-width" src="assets/img/portfolio/out (4).png" alt=""></a></div>
+            <div class="item"><a href="https://www.fxhash.xyz/generative/8120"><img class="u-full-width" src="assets/img/portfolio/panopticon_12.png" alt=""></a></div>
           </div>
         </div>
       </div>
@@ -173,11 +147,11 @@
   <!-- FULL PIX
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <hr>
-  <div class="section">
+  <div class="section fullPix">
     <div class="container">
       <div class="row">
         <div class="twelve columns" style="margin-top: 0%">
-          <img src="assets/img/home/full/codeArt.jpg" class="u-full-width">
+          
         </div>
       </div>
     </div>
@@ -191,7 +165,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 5%">
-        <p>smldms</p>
+        <p>© 2022 SMLDMS. All rights reserved.</p>
       </div>
       <div class="one-half column" style="margin-top: 5%">
         <p> <a href="https://twitter.com/smldms_nft">TWITTER</a> | <a href="https://t.me/smldms_nft">TELEGRAM</a> | <a
