--- a/pages/lof/lof.html
+++ b/pages/lof/lof.html
@@ -154,6 +154,17 @@
     </div>
   </div>
 
+  <!-- DATE
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="section myDate">
+    <div class="container">
+      <div class="row">
+        <div class="one column" style="margin-top: -3%">
+          <h5>Released: September 2022 </h5>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- FULL PIX
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -172,16 +183,17 @@
 </body>
 
 <footer>
-  <div class="section footer">
-    <div class="container">
-      <div class="row">
-        <div class="one-half column" style="margin-top: 5%; font-size:1rem">
-          <h6>smldms</h6>
-          <p> <a href="https://twitter.com/smldms_nft">TWITTER</a> | <a href="https://t.me/smldms_nft">TELEGRAM</a> | <a
-              href="https://twitter.com/smldms_nft">INSTAGRAM</a></p>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="one-half column" style="margin-top: 5%">
+        <p>© 2022 SMLDMS. All rights reserved.</p>
+      </div>
+      <div class="one-half column" style="margin-top: 5%">
+        <p> <a href="https://twitter.com/smldms_nft">TWITTER</a> | <a href="https://t.me/smldms_nft">TELEGRAM</a> | <a
+            href="https://twitter.com/smldms_nft">INSTAGRAM</a></p>
       </div>
     </div>
+  </div>
 </footer>
 
 </html>
