--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <div class="section">
     <div class="container">
       <div class="row">
-        <h5>Last NFT Drop |||  |||||| | ||| | ||| ||</h5>
+        <h5>LAST NFT DROP |||  |||||| | ||| | ||| ||</h5>
         <div class="twelve columns" style="margin-top: 0%">
           <a href="pages/lof/lof.html"><img src="assets/img/home/last/POL_banner.jpg" class="u-full-width"></a>
         </div>
