menu ok on secondary pages

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
           <h5>FEATURED ||||||||||  ||| | |||||| | ||| ||</h5>
           <div class="masonry">
             <div class="item"><a href="https://async.market/blueprints/63191446baa8049d904f9cb9/smldms-the-async-curves"><img class="u-full-width" src="assets/img/portfolio/asyncCurves_0000_Calque 12_0009_asyncCurves_0002_Calque 10.jpg" alt=""></a></div>
+            <div class="item"><a href="pages/mountains/mountains.html"><img class="u-full-width" src="pages/mountains/img/mountains_0000_Calque 5.jpg" alt=""></a></div>
             <div class="item"><a href="https://www.fxhash.xyz/generative/11016"><img class="u-full-width" src="assets/img/portfolio/01.png" alt=""></a></div>
             <div class="item"><a href="https://www.fxhash.xyz/generative/13623"><img class="u-full-width" src="assets/img/portfolio/10.jpg" alt=""></a></div>
             <div class="item"><a href="https://async.market/blueprints/6310a03a508206edcd1d73c9/smldms-mona-kamoto"><img class="u-full-width" src="assets/img/portfolio/monakamoto.jpg" alt=""></a></div>
@@ -140,7 +141,7 @@
           </div>
         </div>
       </div>
-    </div>
+      </div>
   </div>
 
 
