--- a/pages/mountains/mountains.html
+++ b/pages/mountains/mountains.html
@@ -32,6 +32,7 @@
   <link rel="icon" type="image/gif" href="../../../assets/img/home/square.gif">
 
 </head>
+
 <body>
   <header>
     <nav id="site-nav" class="site-nav">
@@ -77,79 +78,27 @@
       <div class="twelve columns" style="margin-top: 0%">
 
         <div class="one-half column" style="margin-top: 5%">
-          <img src="../../../assets/img/home/last/POL_dune.jpg" class="u-full-width">
-
+          <img src="img/24_mountains.gif" class="u-full-width">
         </div>
 
         <div class="one-half column" style="margin-top: 5%">
-          <h4>Patterns Over Landform</h4>
-          <h6>P.O.L is my genesis Blueprint on
+          <h4>Mountains</h4>
+          <h6>This Nft was purchased and is owned by XCopy on
             <a
-              href="https://async.market/blueprints/630e0b0e4048959f0c782f17/smldms-patterns-over-landform">Async.art</a>
+              href="https://async.market/art/master/0xb6dae651468e9593e4581705a09c10a76ac1e0c8-3597">Async.art</a>
           </h6>
-          <p>This work is a generative art project. All the elements (the 4 columns, the dunes, the trees, the circles
-            and the mask bands) were coded separately and randomly distributed in space on a 4K canvas in P5js. Each
-            iteration is therefore unique
-            and 865,810,176,000 combinations are possible for only 128 copies available.</p>
+          <p>24 generations of a mountainous landscape coded with P5.js.
+            The sun of the 80s crosses the screen to show you the time which
+            passes through these multiple digital lands.</p>
+          <p>The image changes state and progresses every hour.</p>
 
           <a class="button"
-            href="https://async.market/blueprints/630e0b0e4048959f0c782f17/smldms-patterns-over-landform">View on
+            href="https://async.market/art/master/0xb6dae651468e9593e4581705a09c10a76ac1e0c8-3597">View on
             Async.art</a>
         </div>
       </div>
     </div>
   </div>
-  </div>
-
-  <!-- LEGENDARY
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-  <div class="section legend">
-    <div class="container">
-      <div class="row">
-        <div class="six columns" style="margin-top: 3%">
-          <h5>Legendary Editions (The acid burn)</h5>
-          <p>Of the 128 editions that will be mounted, only 3 will have legendary status. These three outputs are
-            assembled, retouched and then animated in Adobe After Effects.
-          </p>
-          <p>Saturation is overheat, the acid is rising on the patterns.</p>
-        </div>
-
-        <div class="six columns" style="margin-top: 3%">
-          <video controls loop class="u-full-width">
-            <source src="projet/Legendary.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-
-
-
-  <!-- PORTFOLIO
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="section folio">
-    <div class="container">
-      <div class="row">
-        <div class="twelve columns" style="margin-top: 3%">
-          <h5 style="margin-bottom:-3%">Some outputs</h5>
-          <div class="masonry2">
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/1.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/2.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/3.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/4.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/5.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/6.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/7.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/8.jpg" alt=""></a></div>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
 
   <!-- DATE
@@ -158,7 +107,7 @@
     <div class="container">
       <div class="row">
         <div class="one column" style="margin-top: -3%">
-          <h5>Released: September 2022 </h5>
+          <h5>Released: September 2021 </h5>
         </div>
       </div>
     </div>
