menu ok on secondary pages

--- a/index.html
+++ b/index.html
@@ -69,14 +69,12 @@
   <div class="section p5">
     <div class="container">
       <div class="row">
-        <div class="twelve columns" style="margin-top: 100%">
+        <div class="twelve columns" style="margin-top: 50%">
           <!-- <img class="u-full-width" src="assets/img/home/top.png"> -->
         </div>
       </div>
     </div>
   </div>
-
-
 
   <!-- LAST PROJECT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -136,7 +134,7 @@
             <div class="item"><a href="https://www.fxhash.xyz/generative/15153"><img class="u-full-width" src="assets/img/portfolio/crypto_portrait_2.png" alt=""></a></div>
             <div class="item"><a href="https://www.fxhash.xyz/generative/8990"><img class="u-full-width" src="assets/img/portfolio/genesis_block_4.png" alt=""></a></div>
             <div class="item"><a href="https://www.youtube.com/watch?v=6ifQ22YhC4Q&t=517s"><img class="u-full-width" src="assets/img/portfolio/VEO-2a-6-1024x576.png" alt=""></a></div>
-            <div class="item"><a href="https://www.fxhash.xyz/generative/13150"><img class="u-full-width" src="assets/img/portfolio/out (4).png" alt=""></a></div>
+            <div class="item"><a href="pages/joy_division/joydivision.html"><img class="u-full-width" src="assets/img/portfolio/out (4).png" alt=""></a></div>
             <div class="item"><a href="https://www.fxhash.xyz/generative/8120"><img class="u-full-width" src="assets/img/portfolio/panopticon_12.png" alt=""></a></div>
           </div>
         </div>
