--- a/pages/joy_division/joydivision.html
+++ b/pages/joy_division/joydivision.html
@@ -6,7 +6,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>SMLDMS / Patterns Over Landform</title>
+  <title>SMLDMS / The Joy, the Division</title>
   <meta name="description" content="SMLDMS | Generative & Crypto Art">
   <meta name="smldms" content="SMLDMS | Generative & Crypto Art">
 
@@ -77,56 +77,23 @@
       <div class="twelve columns" style="margin-top: 0%">
 
         <div class="one-half column" style="margin-top: 5%">
-          <img src="../../../assets/img/home/last/POL_dune.jpg" class="u-full-width">
+          <img src="img/present.jpg" class="u-full-width">
 
         </div>
 
         <div class="one-half column" style="margin-top: 5%">
-          <h4>Patterns Over Landform</h4>
-          <h6>P.O.L is my genesis Blueprint on
-            <a
-              href="https://async.market/blueprints/630e0b0e4048959f0c782f17/smldms-patterns-over-landform">Async.art</a>
-          </h6>
-          <p>This work is a generative art project. All the elements (the 4 columns, the dunes, the trees, the circles
-            and the mask bands) were coded separately and randomly distributed in space on a 4K canvas in P5js. Each
-            iteration is therefore unique
-            and 865,810,176,000 combinations are possible for only 128 copies available.</p>
+          <h4>The Joy, the Division</h4>
+          <p>Tribute to the famous Joy Division album "Unknown Pleasures"
+            Made with p5js</p>
 
           <a class="button"
-            href="https://async.market/blueprints/630e0b0e4048959f0c782f17/smldms-patterns-over-landform">View on
-            Async.art</a>
+            href="https://www.fxhash.xyz/generative/13150">View on
+            FxHash</a>
         </div>
       </div>
     </div>
   </div>
   </div>
-
-  <!-- LEGENDARY
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-  <div class="section legend">
-    <div class="container">
-      <div class="row">
-        <div class="six columns" style="margin-top: 3%">
-          <h5>Legendary Editions (The acid burn)</h5>
-          <p>Of the 128 editions that will be mounted, only 3 will have legendary status. These three outputs are
-            assembled, retouched and then animated in Adobe After Effects.
-          </p>
-          <p>Saturation is overheat, the acid is rising on the patterns.</p>
-        </div>
-
-        <div class="six columns" style="margin-top: 3%">
-          <video controls loop class="u-full-width">
-            <source src="projet/Legendary.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-
-        </div>
-      </div>
-    </div>
-  </div>
-
-
 
 
 
@@ -138,15 +105,14 @@
         <div class="twelve columns" style="margin-top: 3%">
           <h5 style="margin-bottom:-3%">Some outputs</h5>
           <div class="masonry2">
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/1.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/2.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/3.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/4.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/5.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/6.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/7.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/8.jpg" alt=""></a></div>
-          </div>
+            <div class="item"><a href="#"><img class="u-full-width" src="https://via.placeholder.com/150"></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="https://via.placeholder.com/150"></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="https://via.placeholder.com/150"></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="https://via.placeholder.com/150"></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="https://via.placeholder.com/150"></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="https://via.placeholder.com/150"></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="https://via.placeholder.com/150"></a></div>
+                  </div>
         </div>
       </div>
     </div>
@@ -158,7 +124,7 @@
     <div class="container">
       <div class="row">
         <div class="one column" style="margin-top: -3%">
-          <h5>Released: September 2022 </h5>
+          <h5>Released: May 2022 </h5>
         </div>
       </div>
     </div>
