menu ok on secondary pages

--- a/pages/monaKamoto/index.html
+++ b/pages/monaKamoto/index.html
@@ -77,25 +77,26 @@
         <div class="container">
             <div class="twelve columns" style="margin-top: 0%">
 
-                <div class="one-half column" style="margin-top: 5%">
-                    <img src="img/present.jpg" class="u-full-width">
 
+                <div class="one-half column" style="margin-top: 5%">
+                    <h4>Mona Kamoto</h4>
+                    <p>Put the Laser Eyes on and mint a Web3 RΞnaissance Blueprint with the great Mona Kamoto.</p>
+                    <p>When the world thought that Dorian Nakamoto could have been Satoshi, his face has become one of
+                        the best known in the cryptosphere. With NFTs, since 2017 we have witnessed a rebirth of digital
+                        art, this is how Mona was born Kamoto. Inspired by probably the most famous canvas in the world,
+                        very symbol of the Renaissance, this Blueprint composition appropriates certain artifices of
+                        90's pop culture, Mona adorns himself with tattoos and wears his laser eyes to disrupt the
+                        system.</p>
+
+                    <a class="button" href="https://www.fxhash.xyz/marketplace/generative/13150">buy on Async.art </a>
                 </div>
-
                 <div class="one-half column" style="margin-top: 5%">
-                    <h4>The Joy, the Division</h4>
-                    <p>Tribute to the famous Joy Division album "Unknown Pleasures"
-                        <br />Made with p5js</p>
-                    <p>Lines and noise draw these changing curves approaching the center of the composition.</p>
-<p class="soldOut">This collection is sold Out on fxHash</p>
-                    <a class="button" href="https://www.fxhash.xyz/marketplace/generative/13150">View on fxHash secondary market
-                        </a>
+                    <img src="#" class="u-full-width">
                 </div>
             </div>
         </div>
     </div>
     </div>
-
 
 
     <!-- PORTFOLIO
@@ -105,7 +106,17 @@
             <div class="row">
                 <div class="twelve columns" style="margin-top: 3%">
                     <h5 style="margin-bottom:-3%">Some outputs</h5>
-                    <div class="masonry3">
+                    <div class="masonry">
+                        <div class="item"><a href="#"><img class="u-full-width"
+                                    src="https://via.placeholder.com/150"></a></div>
+                        <div class="item"><a href="#"><img class="u-full-width"
+                                    src="https://via.placeholder.com/150"></a></div>
+                        <div class="item"><a href="#"><img class="u-full-width"
+                                    src="https://via.placeholder.com/150"></a></div>
+                        <div class="item"><a href="#"><img class="u-full-width"
+                                    src="https://via.placeholder.com/150"></a></div>
+                        <div class="item"><a href="#"><img class="u-full-width"
+                                    src="https://via.placeholder.com/150"></a></div>
                         <div class="item"><a href="#"><img class="u-full-width"
                                     src="https://via.placeholder.com/150"></a></div>
                         <div class="item"><a href="#"><img class="u-full-width"
