--- a/pages/satoshiCollage/satoshi.html
+++ b/pages/satoshiCollage/satoshi.html
@@ -78,18 +78,16 @@
             <div class="twelve columns" style="margin-top: 0%">
 
                 <div class="one-half column" style="margin-top: 5%">
-                    <img src="img/present.jpg" class="u-full-width">
-
+                    <img src="img/satoshi_collage_async.gif" class="u-full-width">
                 </div>
 
                 <div class="one-half column" style="margin-top: 5%">
-                    <h4>The Joy, the Division</h4>
-                    <p>Tribute to the famous Joy Division album "Unknown Pleasures"
-                        <br />Made with p5js</p>
-                    <p>Lines and noise draw these changing curves approaching the center of the composition.</p>
-<p class="soldOut">This collection is sold Out on fxHash</p>
-                    <a class="button" href="https://www.fxhash.xyz/marketplace/generative/13150">View on fxHash secondary market
-                        </a>
+                    <h4>Satoshi Collage</h4>
+                    <p>Generative Collage with multistates</p>
+                    <a class="button"
+                        href="https://async.market/art/master/0xb6dae651468e9593e4581705a09c10a76ac1e0c8-3184">View on
+                        Async.art
+                    </a>
                 </div>
             </div>
         </div>
@@ -105,21 +103,23 @@
             <div class="row">
                 <div class="twelve columns" style="margin-top: 3%">
                     <h5 style="margin-bottom:-3%">Some outputs</h5>
-                    <div class="masonry3">
+                    <div class="masonry">
                         <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
+                                    src="img/satoshi_collage__0008_Calque 3.jpg"></a></div>
                         <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
+                                    src="img/satoshi_collage__0002_Calque 9.jpg"></a></div>
                         <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
+                                    src="img/satoshi_collage__0003_Calque 8.jpg"></a></div>
                         <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
+                                    src="img/satoshi_collage__0004_Calque 7.jpg"></a></div>
                         <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
+                                    src="img/satoshi_collage__0005_Calque 6.jpg"></a></div>
                         <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
+                                    src="img/satoshi_collage__0006_Calque 5.jpg"></a></div>
                         <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
+                                    src="img/satoshi_collage__0007_Calque 4.jpg"></a></div>
+                        <div class="item"><a href="#"><img class="u-full-width"
+                                    src="img/satoshi_collage__0009_Calque 2.jpg"></a></div>
                     </div>
                 </div>
             </div>
