--- a/projects/joy_division/joydivision.html
+++ b/projects/joy_division/joydivision.html
@@ -131,7 +131,7 @@
     <div class="section myDate">
         <div class="container">
             <div class="row">
-                <div class="one column" style="margin-top: -3%">
+                <div class="three columns" style="margin-top: -3%">
                     <h5>Released: May 2022 </h5>
                 </div>
             </div>
