--- a/projects/asyncCurves/index.html
+++ b/projects/asyncCurves/index.html
@@ -165,7 +165,7 @@
     <div class="section myDate">
         <div class="container">
             <div class="row">
-                <div class="one column" style="margin-top: -3%">
+                <div class="three columns" style="margin-top: -3%">
                     <h5>Released: October 2022 </h5>
                 </div>
             </div>
