--- a/projects/monaKamoto/index.html
+++ b/projects/monaKamoto/index.html
@@ -72,7 +72,6 @@
 
     <!-- DESCRIPTION
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <hr>
     <div class="section">
         <div class="container">
             <div class="twelve columns" style="margin-top: 0%">
@@ -87,17 +86,19 @@
                         very symbol of the Renaissance, this Blueprint composition appropriates certain artifices of
                         90's pop culture, Mona adorns himself with tattoos and wears his laser eyes to disrupt the
                         system.</p>
-
-                    <a class="button" href="https://www.fxhash.xyz/marketplace/generative/13150">buy on Async.art </a>
+                    <a class="button" href="#">buy on Async.art </a>
                 </div>
                 <div class="one-half column" style="margin-top: 5%">
-                    <img src="#" class="u-full-width">
+                    <video controls loop class="u-full-width">
+                        <source src="video/monaKamoto.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <!-- <img src="img/present.png" class="u-full-width"> -->
                 </div>
             </div>
         </div>
     </div>
     </div>
-
 
     <!-- PORTFOLIO
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -105,32 +106,20 @@
         <div class="container">
             <div class="row">
                 <div class="twelve columns" style="margin-top: 3%">
-                    <h5 style="margin-bottom:-3%">Some outputs</h5>
+                    <h5 style="margin-bottom:-3%">Random outputs</h5>
                     <div class="masonry">
-                        <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
-                        <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
-                        <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
-                        <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
-                        <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
-                        <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
-                        <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
-                        <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
-                        <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
-                        <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
-                        <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
-                        <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
+                        <div class="item"><a href="#"><img class="u-full-width" src="img/Mona_kamoto_smldms_1.jpg"></a>
+                        </div>
+                        <div class="item"><a href="#"><img class="u-full-width" src="img/Mona_kamoto_smldms_2.jpg"></a>
+                        </div>
+                        <div class="item"><a href="#"><img class="u-full-width" src="img/Mona_kamoto_smldms_3.jpg"></a>
+                        </div>
+                        <div class="item"><a href="#"><img class="u-full-width" src="img/Mona_kamoto_smldms_4.jpg"></a>
+                        </div>
+                        <div class="item"><a href="#"><img class="u-full-width" src="img/Mona_kamoto_smldms_5.jpg"></a>
+                        </div>
+                        <div class="item"><a href="#"><img class="u-full-width" src="img/Mona_kamoto_smldms_6.jpg"></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -142,20 +131,8 @@
     <div class="section myDate">
         <div class="container">
             <div class="row">
-                <div class="one column" style="margin-top: -3%">
-                    <h5>Released: May 2022 </h5>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- FULL PIX
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <hr>
-    <div class="section beforeFooter">
-        <div class="container">
-            <div class="row">
-                <div class="twelve columns" style="margin-top: 10%">
+                <div class="three columns" style="margin-top: -3%">
+                    <h5>Released: September 2022 </h5>
                 </div>
             </div>
         </div>
