--- a/projects/mountains/mountains.html
+++ b/projects/mountains/mountains.html
@@ -106,7 +106,7 @@
   <div class="section myDate">
     <div class="container">
       <div class="row">
-        <div class="one column" style="margin-top: -3%">
+        <div class="three columns" style="margin-top: -3%">
           <h5>Released: September 2021 </h5>
         </div>
       </div>
