add new project

--- a/projects/joy_division/joydivision.html
+++ b/projects/joy_division/joydivision.html
@@ -72,8 +72,7 @@
 
     <!-- DESCRIPTION
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <hr>
-    <div class="section">
+      <div class="section">
         <div class="container">
             <div class="twelve columns" style="margin-top: 0%">
 
@@ -87,9 +86,20 @@
                     <p>Tribute to the famous Joy Division album "Unknown Pleasures"
                         <br />Made with p5js</p>
                     <p>Lines and noise draw these changing curves approaching the center of the composition.</p>
-<p class="soldOut">This collection is sold Out on fxHash</p>
-                    <a class="button" href="https://www.fxhash.xyz/marketplace/generative/13150">View on fxHash secondary market
-                        </a>
+                    <p class="soldOut">This collection is sold Out on fxHash</p>
+                    <a class="button" href="https://www.fxhash.xyz/marketplace/generative/13150">View on fxHash
+                        secondary market
+                    </a>
+                </div>
+
+                <div class="one-half column" style="margin-top: 5%">
+                <hr />
+                    <p class="quote"><i style="font-size: 2.5rem;">w.i.p</i>
+                        <br />Another Joy, Another Division</p>
+                    <p>A reinterpretation of the collection, offering several formats,
+                        several design behaviors, deep and just as synthetic.</p>
+                     
+                        <img class="u-full-width" src="img/bloc.jpg">
                 </div>
             </div>
         </div>
@@ -104,22 +114,26 @@
         <div class="container">
             <div class="row">
                 <div class="twelve columns" style="margin-top: 3%">
-                    <h5 style="margin-bottom:-3%">Some outputs</h5>
-                    <div class="masonry3">
+                    <h5 style="margin-bottom:-3%">Random Outputs</h5>
+                    <div class="masonry">
                         <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
+                                    src="img/theJoyTheDivision_by_smldms_1.jpg"></a></div>
                         <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
+                                    src="img/theJoyTheDivision_by_smldms_2.jpg"></a></div>
                         <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
+                                    src="img/theJoyTheDivision_by_smldms_3.jpg"></a></div>
                         <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
+                                    src="img/theJoyTheDivision_by_smldms_7.jpg"></a></div>
                         <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
+                                    src="img/theJoyTheDivision_by_smldms_12.jpg"></a></div>
                         <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
+                                    src="img/theJoyTheDivision_by_smldms_10.jpg"></a></div>
                         <div class="item"><a href="#"><img class="u-full-width"
-                                    src="https://via.placeholder.com/150"></a></div>
+                                    src="img/theJoyTheDivision_by_smldms_13.jpg"></a></div>
+                        <div class="item"><a href="#"><img class="u-full-width"
+                                    src="img/theJoyTheDivision_by_smldms_14.jpg"></a></div>
+                        <div class="item"><a href="#"><img class="u-full-width"
+                                    src="img/theJoyTheDivision_by_smldms_6.jpg"></a></div>
                     </div>
                 </div>
             </div>
