--- a/projects/monaKamoto/index.html
+++ b/projects/monaKamoto/index.html
@@ -86,6 +86,7 @@
                         very symbol of the Renaissance, this Blueprint composition appropriates certain artifices of
                         90's pop culture, Mona adorns himself with tattoos and wears his laser eyes to disrupt the
                         system.</p>
+                        <p class="quote" style="line-height:100%">Two legendary editions</p>
                     <a class="button" href="#">buy on Async.art </a>
                 </div>
                 <div class="one-half column" style="margin-top: 5%">
@@ -93,7 +94,6 @@
                         <source src="video/monaKamoto.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <!-- <img src="img/present.png" class="u-full-width"> -->
                 </div>
             </div>
         </div>
