--- a/projects/lof/lof.html
+++ b/projects/lof/lof.html
@@ -135,15 +135,16 @@
   <div class="section folio">
     <div class="container">
       <div class="row">
+        <h5 style="margin-bottom:-3%">Some outputs</h5>
         <div class="twelve columns" style="margin-top: 3%">
-          <h5 style="margin-bottom:-3%">Some outputs</h5>
           <div class="masonry2">
             <div class="item"><a href="#"><img class="u-full-width" src="projet/1.jpg" alt=""></a></div>
             <div class="item"><a href="#"><img class="u-full-width" src="projet/2.jpg" alt=""></a></div>
             <div class="item"><a href="#"><img class="u-full-width" src="projet/3.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/4.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projects/lof/projet/POL_by_smldms_2.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projects/lof/projet/POL_by_smldms_4.jpg" alt=""></a></div>
+            <div class="item"><a href="#"><img class="u-full-width" src="projects/lof/projet/POL_by_smldms_6.jpg" alt=""></a></div>
             <div class="item"><a href="#"><img class="u-full-width" src="projet/5.jpg" alt=""></a></div>
-            <div class="item"><a href="#"><img class="u-full-width" src="projet/6.jpg" alt=""></a></div>
             <div class="item"><a href="#"><img class="u-full-width" src="projet/7.jpg" alt=""></a></div>
             <div class="item"><a href="#"><img class="u-full-width" src="projet/8.jpg" alt=""></a></div>
           </div>
