--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>SMLDMS</title>
+  <title>SMLDMS / About</title>
   <meta name="description" content="SMLDMS | Generative & Crypto Art">
   <meta name="smldms" content="SMLDMS | Generative & Crypto Art">
 
