architecture of projects

--- a/projects.html
+++ b/projects.html
@@ -84,33 +84,53 @@
     <div class="section projects">
         <div class="container">
             <div class="row">
-                <div class="two columns" style="margin-top: 2%">
-                    <h5>Generative</h5>
+                <div class="three columns" style="margin-top: 2%">
+                    <h5>Generative Art</h5>
                     <ul>
-                        <li><a href="#">Lorem</a></li>
-                        <li><a href="#">Lorem</a></li>
-                        <li><a href="#">Lorem</a></li>
-                        <li><a href="#">Lorem</a></li>
-                        <li><a href="#">Lorem</a></li>
-                        <li><a href="#">Lorem</a></li>
-                        <li><a href="#">Lorem</a></li>
-                        <li><a href="#">Lorem</a></li>
-                       </ul>
+                        <li><a href="projects/mountains/mountains.html">Mountains</a></li>
+                        <li><a href="#">Lines & Turbulence</a></li>
+                        <li><a href="#">Techno City</a></li>
+                        <li><a href="#">Data Glitch Communication</a></li>
+                        <li><a href="projects/joy_division/joydivision.html">The Joy, The Division</a></li>
+                        <li><a href="projects/asyncCurves/index.html">The Async Curves</a></li>
+                        <li><a href="#">Data Drop</a></li>
+                        <li><a href="#">The Circle</a></li>
+                        <li><a href="#">The Traces</a></li>
+                        <li><a href="#">Techno Cluster</a></li>
+                        <li><a href="#">Panopticon</a></li>
+                        <li><a href="#">Rays & Dust</a></li>
+                        <li><a href="#">Sea View</a></li>
+                    </ul>
                 </div>
-                <div class="two columns" style="margin-top: 2%">
+                <div class="three columns" style="margin-top: 2%">
                     <h5>Crypto Art</h5>
+                    <ul>
+                        <li><a href="projects/monaKamoto/index.html">Mona Kamoto</a></li>
+                        <li><a href="#">Powerful Xtra Card</a></li>
+                        <li><a href="#">Crypto Portrait</a></li>
+                        <li><a href="#">THΞ MΞRGΞ</a></li>
+                        <li><a href="#">Crypto Skulls</a></li>
+                        <li><a href="#">Bitcoin Price</a></li>
+                    </ul>
                 </div>
-                <div class="two columns" style="margin-top: 2%">
-                    <h5>Video</h5>
+                <div class="three columns" style="margin-top: 2%">
+                    <h5>Animation</h5>
+                    <ul>
+                        <li><a href="#">Voyage en Egypte 2.0</a></li>
+                        <li><a href="#">In a Loop</a></li>
+                        <li><a href="#">Hodlers</a></li>
+                        <li><a href="#">ŁȺnđsȼȺᵽɇ vɨƀɍȺŧɨøn</a></li>
+                        <li><a href="#">Crypto Skulls</a></li>
+                    </ul>
                 </div>
-                <div class="two columns" style="margin-top: 2%">
-                    <h5>Gif</h5>
-                </div>
-                <div class="two columns" style="margin-top: 2%">
-                    <h5>Mixed Media</h5>
-                </div>
-                <div class="two columns" style="margin-top: 2%">
-                    <h5>Post-Photo</h5>
+                <div class="three columns" style="margin-top: 2%">
+                    <h5>Post-Photography</h5>
+                    <ul>
+                        <li><a href="#">Rans in Paris</a></li>
+                        <li><a href="#">Windows on Texture</a></li>
+                        <li><a href="#">Anatomy of a Zombie</a></li>
+                        <li><a href="#">Lisle Noire</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
